Quiz analytics (TotalAnalytics is bad now :( )

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -419,3 +419,11 @@ table.diff tbody th {
 .hide-side-bar-button {
 	float: left;
 }
+
+.falseQuizAnswer {
+	background-color: lightcoral;
+}
+
+.rightQuizAnswer {
+	background-color: lightgreen;
+}
