--- a/src/uLearn.Web/Views/Course/_Quiz.cshtml
+++ b/src/uLearn.Web/Views/Course/_Quiz.cshtml
@@ -40,10 +40,10 @@
 		    @Html.Partial("_TrueFalseBlock", quizModel)
 		}
 	}
-	//if (User.IsInRole(LmsRoles.Instructor))
-	//{
+	if (User.IsInRole(LmsRoles.Instructor) || User.IsInRole(LmsRoles.Admin))
+	{
 		@Html.Action("GetAnalytics", "Quiz", new { courseId = Model.CourseId, slideIndex = Model.Slide.Index })
-	//}
+	}
 	<div class="no-display" id="GetRightAnswersToQuiz" data-url="@Url.Action("GetRightAnswersToQuiz","Quiz")">none</div>
 	<div id="SubmitQuiz" data-url='@Url.Action("SubmitQuiz","Quiz")'>
 		<button class="btn btn-default quiz-submit-btn" onclick="submitQuiz('@Model.CourseId','@Model.Slide.Index','@Model.AnswersToQuizes.Count')">Submit my result</button>
