--- a/src/uLearn.Web/Views/Shared/DisplayTemplates/YoutubeBlock.cshtml
+++ b/src/uLearn.Web/Views/Shared/DisplayTemplates/YoutubeBlock.cshtml
@@ -1,6 +1,8 @@
 ﻿@using uLearn
 @model YoutubeBlock
 <iframe class='embedded-video' width='800' height='450' src='//www.youtube.com/embed/@Model.VideoId' frameborder='0' allowfullscreen></iframe>
-<a href="javascript://" class="popover-trigger"
-   title="Как ускорить видео?"
-   data-content="Если по иконке с шестеренкой нет возможности ускорить видео, то вам нужно &lt;a target='blank' href='http://youtube.com/html5'>вручную включить&lt;/a> использование HTML5-плеера.">Как ускорить видео?</a>
+<div>
+	<a href="javascript://" class="popover-trigger"
+	   title="Как ускорить видео?"
+	   data-content="Если по иконке с шестеренкой нет возможности ускорить видео, то вам нужно &lt;a target='blank' href='http://youtube.com/html5'>вручную включить&lt;/a> использование HTML5-плеера.">Как ускорить видео?</a>
+</div>
