Codemirror: fix cursor invisibility on matching bracket highlighting

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -32,7 +32,8 @@
 }
 
 .cm-s-cobalt .CodeMirror-matchingbracket {
-	outline-color: #006B8B !important;
+	outline-color: rgb(0, 100, 100) !important;
+	outline-color: rgba(0, 200, 200, 0.5) !important;
 }
 
 .nav-arrow {
