Course administration pages

--- a/src/uLearn.Web/Views/Course/_AskBar.cshtml
+++ b/src/uLearn.Web/Views/Course/_AskBar.cshtml
@@ -9,6 +9,10 @@
 				<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
 				<h4 class="modal-title" id="myModalLabel">Задать вопрос преподавателю</h4>
 			</div>
+			<div>
+				Ваш вопрос увидят преподаватели и смогут разобрать его на аудиторной практике.
+				Кроме того, авторы курса смогут подправить материал так, чтобы он стал понятнее.
+			</div>
 			<div class="modal-body">
 				<textarea id="questField" class="ask-bar"> </textarea>
 				<button class="btn btn-primary" id="sendButton" type="button" data-dismiss="modal" onclick="sendQuestion('@Model.Slide.Title', '@Model.Slide.Info.UnitName')">Отправить</button>
