--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -25,7 +25,7 @@
 			@if (User.IsInRole(LmsRoles.Instructor))
 			{
 				<div id="GetAllQuestions" data-url="@Url.Action("GetAllQuestions")">
-					<button class="all-questions" onclick="printallquestions('@Model.Slide.Info.UnitName')">Посмотреть все заданные вопросы по теме</button>
+					<button class="all-questions" onclick="printAllQuestions('@Model.Slide.Info.UnitName')">Посмотреть все заданные вопросы по теме</button>
 				</div>
 				<div class="questions-log"></div>
 			}
