--- a/src/uLearn.Web/Views/Analytics/PersonalStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/PersonalStatistics.cshtml
@@ -27,17 +27,16 @@
 							foreach (var stats in Model.PersonalStatistics)
 							{
 								var isNeedDrowHintsInfo = stats.IsExercise && stats.HintsCountOnSlide != 0;
+								var url = Url.Action("Slide", "Course", new {courseId = Model.CourseId, slideIndex = stats.SlideIndex}, null);
 								<tr>
-									<td data-sort-value=@(stats.SlideIndex)>
-										@Html.ActionLink(
-											stats.UnitName + ": " + stats.SlideTitle,
-											"Slide", "Course",
-											new { courseId = Model.CourseId, slideIndex = stats.SlideIndex },
-											null)
+									<td class="slide-list-item" 
+									    data-sort-value=@(stats.SlideIndex + 100000) 
+										onclick="window.location.href='@url'">
+											<p class="table-header">@(stats.UnitName + ": " + stats.SlideTitle)</p>
 									</td>
 									<td data-sort-value="@(stats.IsVisited ? 1 : 0)" class="analytics @(stats.IsVisited ? "visited" : "not-visited")"></td>
-									<td data-sort-value="@(stats.IsSolved ? 1 : stats.IsExercise ? 0 : 2)"
-										class="analytics @(stats.IsSolved? "solved" : stats.IsExercise ? "not-solved" : "")"></td>
+									<td data-sort-value="@(stats.IsSolved ? 2 : (stats.IsExercise || stats.IsQuiz) ? 1 : 0)"
+									    class="analytics @(stats.IsSolved? "solved" : stats.IsExercise || stats.IsQuiz ? "not-solved" : "")"></td>
 									<td>@(stats.UserRate ?? "")</td>
 									<td data-sort-value="@(isNeedDrowHintsInfo ? stats.HintsCountOnSlide + 1000 : 0)">
 										@(isNeedDrowHintsInfo ? stats.HintsCountOnSlide.ToString(CultureInfo.InvariantCulture) : "")
