--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -1,34 +1,34 @@
 .course-header {
-    background-color: #6f5499;
-    color: white;
-    padding: 30px 15px;
-    margin-bottom: 30px;
+	background-color: #6f5499;
+	color: white;
+	padding: 30px 15px;
+	margin-bottom: 30px;
 }
 
 .slide-nav {
-    margin-top: 30px;
+	margin-top: 30px;
 }
 
 .slide-nav-link {
-    margin-right: 30px;
+	margin-right: 30px;
 }
 
 .container {
-    max-width: 800px;
+	max-width: 864px;
 }
 
 .CodeMirror {
-    height: auto;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    line-height: 1.3em;
-    font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
+	height: auto;
+	margin-bottom: 20px;
+	margin-top: 20px;
+	line-height: 1.3em;
+	font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
 }
 
 .CodeMirror-scroll {
-    overflow-y: hidden;
-    overflow-x: auto;
-    height: auto;
+	overflow-y: hidden;
+	overflow-x: auto;
+	height: auto;
 }
 
 .cm-s-cobalt .CodeMirror-matchingbracket {
@@ -37,68 +37,68 @@
 }
 
 .nav-arrow {
-    margin: 0;
-    width: 50%;
-    text-align: center;
-    justify-content: center;
-    align-content: center;
-    font-size: xx-large;
-    color: lightblue;
-    padding: 10px;
+	margin: 0;
+	width: 50%;
+	text-align: center;
+	justify-content: center;
+	align-content: center;
+	font-size: xx-large;
+	color: lightblue;
+	padding: 10px;
 }
 
 a.nav-arrow:hover {
-    text-decoration: none;
-    color: white;
-    background-color: lightblue;
+	text-decoration: none;
+	color: white;
+	background-color: lightblue;
 }
 
 .nav-left {
-    float: left;
+	float: left;
 }
 
 .nav-right {
-    float: right;
+	float: right;
 }
 
 .output-label {
-    text-align: center;
-    margin-top: 20px;
-    display: none;
+	text-align: center;
+	margin-top: 20px;
+	display: none;
 }
 
 .actual-output {
-    float: left;
-    width: 50%;
-    margin: 0;
+	float: left;
+	width: 50%;
+	margin: 0;
 }
 
 .expected-output {
-    float: left;
-    width: 50%;
-    margin: 0;
+	float: left;
+	width: 50%;
+	margin: 0;
 }
 
 .actual-output pre {
-    min-height: 200px;
+	min-height: 200px;
 }
 
 .expected-output pre {
-    min-height: 200px;
+	min-height: 200px;
 }
 
 .clear-code-button {
-    margin: 20px 0 20px 0;
+	margin: 20px 0 20px 0;
 }
 
 .sphere-engine-tm {
-    margin: 0 0 -20px 0;
-    text-align: right;
-    font-size: small;
+	margin: 0 0 -20px 0;
+	text-align: right;
+	font-size: small;
 }
 
 .after-run-block {
-    display: none;
+	display: none;
 }
 
 .actual-output-content {
@@ -114,80 +114,80 @@ a.nav-arrow:hover {
 }
 
 .diff-table {
-    width: 100%;
-    margin-top: 25px;
-    word-wrap: break-word;
-    margin-bottom: 10px;
+	width: 100%;
+	margin-top: 25px;
+	word-wrap: break-word;
+	margin-bottom: 10px;
 }
 
 .run-verdict {
-    height: 46px;
-    line-height: 46px;
-    width: 100%;
-    text-align: center;
-    display: none;
-    font-size: x-large;
-    color: white;
-    margin-top: 10px;
+	height: 46px;
+	line-height: 46px;
+	width: 100%;
+	text-align: center;
+	display: none;
+	font-size: x-large;
+	color: white;
+	margin-top: 10px;
 }
 
 .half-size {
-    width: 50%;
+	width: 50%;
 }
 
 .full-size {
-    width: 100%;
+	width: 100%;
 }
 
 .no-rounds {
-    border-radius: 0px;
-    -webkit-border-radius: 0px;
-    -moz-border-radius: 0px;
+	border-radius: 0px;
+	-webkit-border-radius: 0px;
+	-moz-border-radius: 0px;
 }
 
 .units-list {
-    list-style-type: none;
+	list-style-type: none;
 }
 
 .units-list-item {
-    padding: 0.5em 0.2em 0.5em 0.1em;
+	padding: 0.5em 0.2em 0.5em 0.1em;
 }
 
 .units-list-item-text {
-    font-size: 1.3em;
+	font-size: 1.3em;
 }
 
 .slides-list {
-    font-weight: normal;
-    padding-left: 0;
-    margin-top: 0.5em;
+	font-weight: normal;
+	padding-left: 0;
+	margin-top: 0.5em;
 }
 
 .slide-list-item {
-    list-style-type: none;
-    border-bottom: 1px solid #eee;
-    padding: 0.5em 0 0.5em 2em;
-    cursor: pointer;
-    color: #428bca;
+	list-style-type: none;
+	border-bottom: 1px solid #eee;
+	padding: 0.5em 0 0.5em 2em;
+	cursor: pointer;
+	color: #428bca;
 }
 
-    .slide-list-item.selected {
-        background-color: #f5f5f5;
-        font-weight: bolder;
-        list-style-type: none;
-        cursor: pointer;
-        color: #428bca;
-    }
+	.slide-list-item.selected {
+		background-color: #f5f5f5;
+		font-weight: bolder;
+		list-style-type: none;
+		cursor: pointer;
+		color: #428bca;
+	}
 
 .side-bar {
-    width: 320px;
-    float: left;
-    margin: 0;
-    padding: 20px;
+	width: 320px;
+	float: left;
+	margin: 0;
+	padding: 20px;
 }
 
 .slide-container {
-    margin-left: 320px;
+	margin-left: 320px;
 }
 
 @media (max-width: 768px) {
@@ -197,235 +197,229 @@ a.nav-arrow:hover {
 }
 
 .ask-bar {
-    max-width: none;
-    width: 100%;
-    margin-bottom: 15px;
-    resize: none;
+	max-width: none;
+	width: 100%;
+	margin-bottom: 15px;
+	resize: none;
 }
 
 .ask-button {
-    margin-top: 10px;
+	margin-top: 10px;
 }
 
 .solution-bar {
-    max-width: 500px;
-    width: 500px;
+	max-width: 500px;
+	width: 500px;
 }
 
 .answer-table {
-    border-width: 1px;
-    width: 100%;
-    background-color: aliceblue;
-    border-color: black;
-    margin-top: 10px;
-    table-layout: fixed;
-    word-break: break-word;
+	border-width: 1px;
+	width: 100%;
+	background-color: aliceblue;
+	border-color: black;
+	margin-top: 10px;
+	table-layout: fixed;
+	word-break: break-word;
 }
 
 .answer-table-headers {
-    background-color: lightgray;
-    font-weight: bolder;
+	background-color: lightgray;
+	font-weight: bolder;
 }
 
 .visited-hint {
-    background-color: lightgreen;
-    padding: 10px 15px;
-    border-bottom: 1px solid transparent;
-    border-top-right-radius: 3px;
-    border-top-left-radius: 3px;
+	background-color: lightgreen;
+	padding: 10px 15px;
+	border-bottom: 1px solid transparent;
+	border-top-right-radius: 3px;
+	border-top-left-radius: 3px;
 }
 
 .green-cell {
-    background-color: lightgreen;
+	background-color: lightgreen;
 }
 
 .clear-code {
-    text-decoration: none;
+	text-decoration: none;
 }
 
-    .clear-code:hover {
-        text-decoration: none;
-        color: white;
-        cursor: pointer;
-        background-color: #838383;
-    }
+	.clear-code:hover {
+		text-decoration: none;
+		color: white;
+		cursor: pointer;
+		background-color: #838383;
+	}
 
 .likes-counter {
-    margin-left: 0px;
+	margin-left: 0px;
 }
 
 .rate-buttons {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    float: right;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	float: right;
 }
 
 .table-header {
-    color: #428bca;
+	color: #428bca;
 }
 
 table.diff tbody td {
-	padding: 0;	
+	padding: 0;
 }
 
 table.diff tbody th {
-    padding: 0 3px 0 0;
-    text-align: right;
-    vertical-align: middle;
+	padding: 0 3px 0 0;
+	text-align: right;
+	vertical-align: middle;
 }
 
 .like-left-location {
-    margin-right: 10px;
-    float: left;
+	margin-right: 10px;
+	float: left;
 }
 
 .navbar-label {
-    float: left;
-    margin-right: 5px;
-    margin-top: 7px;
+	float: left;
+	margin-right: 5px;
+	margin-top: 7px;
 }
 
 .navbar-label-default {
-    color: lightgray;
+	color: lightgray;
 }
 
 .navbar-label-success {
-    color: lightgreen;
+	color: lightgreen;
 }
 
 .navbar-label-danger {
-    color: lightcoral;
+	color: lightcoral;
 }
 
 .block-next {
-    color: gray;
-    background-color: aliceblue;
-    margin-left: 0 !important;
+	color: gray;
+	background-color: aliceblue;
+	margin-left: 0 !important;
 }
 
 .free-next {
-    color: black;
-    background-color: white;
-    margin-left: 0 !important;
+	color: black;
+	background-color: white;
+	margin-left: 0 !important;
 }
 
 .solution-control {
-    width: 100%;
-    margin-top: -20px;
-    margin-left: 0 !important;
+	width: 100%;
+	margin-top: -20px;
+	margin-left: 0 !important;
 }
 
 .reset-btn {
-    width: 25%;
-    margin-left: 0 !important;
+	width: 25%;
+	margin-left: 0 !important;
 }
 
 .hints-btn {
-    width: 25%;
-    margin-left: 0 !important;
-    float: right !important;
+	width: 25%;
+	margin-left: 0 !important;
+	float: right !important;
 }
 
 .run-solution-button {
-    width: 50%;
-    margin-bottom: 10px;
-    margin-left: 0 !important;
+	width: 50%;
+	margin-bottom: 10px;
+	margin-left: 0 !important;
 }
 
 .not-watched {
 }
 
 .all-questions {
-    margin-top: 10px;
+	margin-top: 10px;
 }
 
 .rates-bar {
-    width: 100%;
-    margin-bottom: -11px;
-    margin-left: 0 !important;
+	width: 100%;
+	margin-bottom: -11px;
+	margin-left: 0 !important;
 }
 
 .navs {
-    margin-top: -21px;
-    margin-left: 0 !important;
+	margin-top: -21px;
+	margin-left: 0 !important;
 }
 
 .ctrl-group {
-    margin-left: 0 !important;
+	margin-left: 0 !important;
 }
 
 .wrong-quiz {
-    color: lightcoral;
+	color: lightcoral;
 }
 
 .right-quiz {
-    color: darkseagreen;
+	color: darkseagreen;
 }
 
 .not-understand-btn {
-    width: 33%;
+	width: 33%;
 }
 
 .understand-btn {
-    width: 33%;
+	width: 33%;
 }
 
 .trivial-btn {
-    width: 34%;
-    float: right !important;
+	width: 34%;
+	float: right !important;
 }
 
 .full-width {
-    width: 100%;
+	width: 100%;
 }
 
 .half-width {
-    width: 50%;
+	width: 50%;
 }
 
 .quiz-submit-btn {
-    margin-top: -10px;
-    margin-bottom: 5px;
+	margin-top: -10px;
+	margin-bottom: 5px;
 }
 
 .no-display {
-    display: none;
+	display: none;
 }
 
 .block-display {
-    display: block;
+	display: block;
 }
 
 .quiz {
-    
 }
 
 
 .true {
-    
 }
 
 .false {
-    
 }
 
 .answered {
-    
 }
 
 .quiz-block-mark {
-    
 }
 
 .quiz-block-input {
-    
 }
 
 .quiz-delimeter {
-    margin-bottom: 40px;
-    margin-top: 40px;
-    color: gray;
-    align-self: center;
+	margin-bottom: 40px;
+	margin-top: 40px;
+	color: gray;
+	align-self: center;
 }
 
 .hide-side-bar-button {
@@ -439,3 +433,21 @@ table.diff tbody th {
 .rightQuizAnswer {
 	background-color: lightgreen;
 }
+
+.video-container {
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 30px;
+	height: 0;
+	overflow: hidden;
+}
+
+	.video-container iframe,
+	.video-container object,
+	.video-container embed {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
