--- a/src/uLearn.Web/Views/Home/Index.cshtml
+++ b/src/uLearn.Web/Views/Home/Index.cshtml
@@ -9,6 +9,17 @@
 
 	<div class="row">
 		<div class="col-md-6">
+			<h2>Основы программирования на примере языка C#</h2>
+			<p>
+				Длительность курса: 1 семестр, 2—4 часа в неделю.
+			</p>
+			<p>
+				Курс разработан для студентов первого года обучения компьютерных специальностей ИМКН УрФУ.
+				Расчитан на людей с минимальным опытом программирования.
+			</p>
+			<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "BasicProgramming" }, null)</p>
+		</div>
+		<div class="col-md-6">
 			<h2>Практикум по языку запросов LINQ</h2>
 			<p>
 				Длительность курса: 2-4 часа.
@@ -21,13 +32,6 @@
 				Курс будет полезен, даже если вы уже поверхностно знакомы с LINQ.
 			</p>
 			<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "Linq" }, null)</p>
-		</div>
-		<div class="col-md-6">
-			<h2>Основы программирования на C#</h2>
-			<p>
-				[В процессе разработки]
-			</p>
-			<p>@Html.ActionLink("Поехали!", "Slide", "Course", new { courseId = "BasicProgramming" }, null)</p>
 		</div>
 	</div>
 </div>
