--- a/src/uLearn.Web/Views/Analytics/UnitStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UnitStatistics.cshtml
@@ -16,14 +16,24 @@
 						<tr>
 							<th>user name</th>
 							<th>group name</th>
-							@for (var i = 0; i < Model.Slides.Length; i++)
+							@foreach (var slide in Model.Slides)
 							{
-								var slide = Model.Slides[i];
-								var url = Url.Action("Slide", "Course", new {courseId = Model.CourseId, slideIndex = i}, null);
-								<th class="slide-list-item" 
-									data-sort-value=@(i + 100000) 
-									onclick="window.location.href='@url'">
-									<p class="table-header">@slide.Title</p>
+								string text;
+								if (slide is ExerciseSlide)
+								{
+									text = "Попыток решить:";
+								}
+								else if (slide is QuizSlide)
+								{
+									text = "Успешность квиза:";
+								}
+								else
+								{
+									text = "Посещаемость:";
+								}
+								<th>
+									<p>@slide.Title</p>
+									<p>@text</p>
 								</th>
 							}
 						</tr>
@@ -35,8 +45,8 @@
 								<td>
 									<h6>@user.Key</h6>
 								</td>
-								<td>
-									<textarea id="@(user.Key)" data-url="@Url.Action("AddUserGroup","Analytics")">@user.Value.UserGroup</textarea>
+								<td data-sort-value="@user.Value.UserGroup">
+									<input id="@(user.Key)" data-url="@Url.Action("AddUserGroup", "Analytics")" type="text" value="@user.Value.UserGroup" />
 									<button onclick="changeGroup('@user.Key')">Change group</button>
 								</td>
 								@for (var i = 0; i < user.Value.SlidesInfo.Length; i++)
@@ -44,17 +54,22 @@
 									if (Model.Slides[i] is ExerciseSlide)
 									{
 										var styleClass = @user.Value.SlidesInfo[i].IsExerciseSolved ? "green-stat" : "red-stat";
-										<td class="@styleClass">Попыток сделано: @user.Value.SlidesInfo[i].AttemptsNumber</td>
+										<td data-sort-value="@(user.Value.SlidesInfo[i].AttemptsNumber + 1000000)" 
+											class="@styleClass">@user.Value.SlidesInfo[i].AttemptsNumber
+										</td>
 									}
 									else if (Model.Slides[i] is QuizSlide)
 									{
 										var styleClass = @user.Value.SlidesInfo[i].IsQuizPassed ? "green-stat" : "red-stat";
-										<td class="@styleClass">Квиз решен на: @(user.Value.SlidesInfo[i].QuizSuccessful)%</td>
+										<td data-sort-value="@(user.Value.SlidesInfo[i].QuizSuccessful + 10000)"
+											class="@styleClass">
+											@(user.Value.SlidesInfo[i].QuizSuccessful)%
+										</td>
 									}
 									else
 									{
 										var styleClass = @user.Value.SlidesInfo[i].IsVisited ? "green-stat" : "red-stat";
-										<td class="@styleClass"></td>
+										<td data-sort-value="@styleClass" class="@styleClass"></td>
 									}
 								}
 							</tr>
