temporary remove group selection

--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -48,7 +48,7 @@
 		}
 	</div>
 </div>
-@if (Model.IsFirstCourseVisit)
+@if (false)
 {
 	<a id="first_visit" data-toggle="modal" data-target="#myModal2" href="#myModal2" class="hidden">
 		Выберите свою группу
